--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Flask-Bootstrap==3.3.7.1
 flatbuffers==1.12
 gast==0.4.0
 grpcio==1.34.1
+gunicorn==20.1.0
 h5py==3.1.0
 idna==2.10
 itsdangerous==2.0.1
