--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7.2
 six==1.15.0
+Sastrawi==1.0.1
 tensorboard==2.5.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
