--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ requests-oauthlib==1.3.0
 rsa==4.7.2
 six==1.15.0
 Sastrawi==1.0.1
+scikit-learn==0.24.2
 tensorboard==2.5.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
